# re-guiscrpy

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: main.rs
src/components/: ControlPanel.tsx  DeviceCard.tsx  Notification.tsx  QuickSettings.tsx  Sidebar.tsx  WirelessConnect.tsx
src/hooks/: useDevices.ts  useScrcpy.ts
src/lib/: i18n.ts
src/pages/: Dashboard.tsx  Profiles.tsx  Settings.tsx
src/stores/: appStore.ts
